Fix gallery thumb spacing

--- a/site/content/stylesheet.scss
+++ b/site/content/stylesheet.scss
@@ -61,6 +61,9 @@ footer {
 
 .gallery {
   margin-top: 2em;
+  li {
+    margin-bottom: 10px;
+  }
 }
 
 .houses {
